partman-auto-lvm (29) UNRELEASED; urgency=low

  [ Christian Perrier ]
  * Add translation sublevel markers to debconf templates.

  [ Jérémy Bobbio ]
  * Use convert_to_megabytes() in auto_lvm_prepare().
    Depends: partman-base (>= 125)

 -- Jérémy Bobbio <lunar@debian.org>  Sat, 16 Aug 2008 16:03:07 +0000

partman-auto-lvm (28) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Update perform_recipe_by_lvm to use extents when calling lv_create().
    Depends: partman-lvm (>= 62)
  * auto_lvm_prepare() now returns 255 instead of 30 for backup like
    the rest of partman.
  * Propagate auto_lvm_prepare() error code in autopartition-lvm.
  * Correctly handle GOBACK in
    automatically_partition/some_device_lvm/do_option.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Italian (it.po) by Milo Casagrande
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Turkish (tr.po) by Mert Dirik
	
 -- Otavio Salvador <otavio@debian.org>  Tue, 05 Aug 2008 13:44:53 -0300

partman-auto-lvm (27) unstable; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Hungarian (hu.po) by SZERVÁC Attila
  * Kurdish (ku.po) by Erdal Ronahi
  * Marathi (mr.po) by Sampada
  * Panjabi (pa.po) by Amanpreet Singh Alam

 -- Otavio Salvador <otavio@debian.org>  Thu, 08 May 2008 00:54:09 -0300

partman-auto-lvm (26) unstable; urgency=low

  [ Frans Pop ]
  * Create envelope partition on primary partition if possible.
    Requires partman-auto (>= 74).
  * Remove dependency on lvm2-udeb as partman-lvm already depends on it.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet
