@@ -9,5 +9,5 @@ Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/partman/partman-auto-lvm
 Package: partman-auto-lvm
 XC-Package-Type: udeb
 Architecture: all
-Depends: ${misc:Depends}, partman-base (>= 125), partman-auto (>= 74), partman-lvm (>= 62), di-utils (>= 1.15)
+Depends: ${misc:Depends}, partman-base (>= 125), partman-auto (>= 81), partman-lvm (>= 62), di-utils (>= 1.15)
 Description: Automatically partition storage devices using LVM
